# rust-commit-lint

./: Cargo.toml  README.md  demo.toml  rust-toolchain
demo/: commit-msg  demo.toml
src/: cli.yml  main.rs  test.rs
