[package]
name = "commit-lint"
version = "0.1.0"
authors = ["niexiaotao <niexiaotao@high-flyer.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "^2", features = ["yaml"] }

toml = "0.5.8"
serde = "1.0.130"
serde_derive = "1.0.130"
regex = "1"